Remove listOrganizations references and documentation (HD-689).

--- a/jsapi.html
+++ b/jsapi.html
@@ -205,7 +205,7 @@ SheerID.load('asset', '1.0', {
                 <tr>
                     <td><code>params</code></td>
                     <td>No</td>
-                    <td>An object literal containing request parameters that will be supplied to the <a href="/docs/organization/listOrganizations.html">List Organizations</a> or the <a href="/docs/organization/typeahead.html">Typeahead</a> resource method to further refine the organizations that are returned.  This can be used to modify the combobox for international use by assigning the parameter <code>country</code> to a value containing a string of the corresponding country code and the parameter <code>includeLocation</code> to the boolean <code>true</code>.</td>
+                    <td>An object literal containing request parameters or the <a href="/docs/organization/typeahead.html">Typeahead</a> resource method to further refine the organizations that are returned.  This can be used to modify the combobox for international use by assigning the parameter <code>country</code> to a value containing a string of the corresponding country code and the parameter <code>includeLocation</code> to the boolean <code>true</code>.</td>
                     <td><em>none</em></td>
                 </tr>
                 <tr>
