[HD-5722] add no follow tag and deprecated banner

--- a/index.html
+++ b/index.html
@@ -2,11 +2,18 @@
 <html>
 <head>
 	<title>SheerID Developer Center</title>
-	<link rel="stylesheet" href="/common/deprecated/css/bootstrap.css" type="text/css"/>
+	<link rel="stylesheet" href="/common/deprecated/css/bootstrap.css" type="text/css"/> 
 	<link rel="stylesheet" href="/common/deprecated/css/bootstrap-responsive.css" type="text/css"/>
 	<link rel="stylesheet" href="/common/sheerid/css/sheerid.css" type="text/css"/>
+	<meta name="robots" content="noindex, nofollow" />
 </head>
 <body>
+	<div class="deprecated-banner">
+		<span class="deprecated-banner-text">
+			This site features documentation for an older, secondary API version. For the most up-to-date documentation please visit <a href="http://developer.sheerid.com">http://developer.sheerid.com</a>.
+		</span>
+	</div>
+
 	<div class="page">
 		<div class="navbar">
 			<div class="navbar-inner">
@@ -63,20 +70,6 @@
 					<h3>Comments? Questions?</h3>
 					<p><a href="http://www.sheerid.com/contact/" target="_blank">Contact us</a> to share your feedback.</p>
 
-					<h3>Search This Site</h3>
-					<script>
-					  (function() {
-					    var cx = '002328303735659126822:gao1rda3r80';
-					    var gcse = document.createElement('script');
-					    gcse.type = 'text/javascript';
-					    gcse.async = true;
-					    gcse.src = (document.location.protocol == 'https:' ? 'https:' : 'http:') +
-					        '//www.google.com/cse/cse.js?cx=' + cx;
-					    var s = document.getElementsByTagName('script')[0];
-					    s.parentNode.insertBefore(gcse, s);
-					  })();
-					</script>
-					<gcse:search></gcse:search>
 				</div>
 				<div class="span4">
 					<div class="well">
